nlb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: nlb-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths: 
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
